emulator-core/build/intermediates/cxx/Debug/qn4s5252/logs/arm64-v8a/build_stdout_mgba_jni.txt
ninja: Entering directory `/home/hunter/Development/SquintBoy/emulator-core/.cxx/Debug/qn4s5252/arm64-v8a'
[1/4] cd /home/hunter/Development/SquintBoy/external/mgba && /home/hunter/Android/Sdk/cmake/3.22.1/bin/cmake -DBINARY_NAME=mgba -DCONFIG_FILE=/home/hunter/Development/SquintBoy/external/mgba/src/core/version.c.in -DOUT_FILE=/home/hunter/Development/SquintBoy/emulator-core/.cxx/Debug/qn4s5252/arm64-v8a/mgba/version.c -P /home/hunter/Development/SquintBoy/external/mgba/version.cmake
[2/4] Linking C static library mgba/libmgba.a
[3/4] Building CXX object CMakeFiles/mgba_jni.dir/mgba_jni.cpp.o
FAILED: CMakeFiles/mgba_jni.dir/mgba_jni.cpp.o 
/home/hunter/Android/Sdk/ndk/27.0.12077973/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=aarch64-none-linux-android30 --sysroot=/home/hunter/Android/Sdk/ndk/27.0.12077973/toolchains/llvm/prebuilt/linux-x86_64/sysroot -Dmgba_jni_EXPORTS -I/home/hunter/Development/SquintBoy/external/mgba/include -I/home/hunter/Development/SquintBoy/emulator-core/.cxx/Debug/qn4s5252/arm64-v8a/mgba/include -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -fno-limit-debug-info  -fPIC -std=c++17 -MD -MT CMakeFiles/mgba_jni.dir/mgba_jni.cpp.o -MF CMakeFiles/mgba_jni.dir/mgba_jni.cpp.o.d -o CMakeFiles/mgba_jni.dir/mgba_jni.cpp.o -c /home/hunter/Development/SquintBoy/emulator-core/src/main/cpp/mgba_jni.cpp
/home/hunter/Development/SquintBoy/emulator-core/src/main/cpp/mgba_jni.cpp:22:8: error: unknown type name 'color_t'
   22 | static color_t* g_videoBuffer = nullptr;
      |        ^
/home/hunter/Development/SquintBoy/emulator-core/src/main/cpp/mgba_jni.cpp:52:14: error: use of undeclared identifier 'mCoreFind'; did you mean 'mCoreFindVF'?
   52 |     g_core = mCoreFind(romPath);
      |              ^~~~~~~~~
      |              mCoreFindVF
/home/hunter/Development/SquintBoy/external/mgba/include/mgba/core/core.h:203:15: note: 'mCoreFindVF' declared here
  203 | struct mCore* mCoreFindVF(struct VFile* vf);
      |               ^
/home/hunter/Development/SquintBoy/emulator-core/src/main/cpp/mgba_jni.cpp:52:24: error: cannot initialize a parameter of type 'struct VFile *' with an lvalue of type 'const char *'
   52 |     g_core = mCoreFind(romPath);
      |                        ^~~~~~~
/home/hunter/Development/SquintBoy/external/mgba/include/mgba/core/core.h:203:41: note: passing argument to parameter 'vf' here
  203 | struct mCore* mCoreFindVF(struct VFile* vf);
      |                                         ^
/home/hunter/Development/SquintBoy/emulator-core/src/main/cpp/mgba_jni.cpp:67:24: error: use of undeclared identifier 'VFileOpen'
   67 |     struct VFile* vf = VFileOpen(romPath, O_RDONLY);
      |                        ^
/home/hunter/Development/SquintBoy/emulator-core/src/main/cpp/mgba_jni.cpp:87:22: error: use of undeclared identifier 'color_t'
   87 |     g_videoBuffer = (color_t*)malloc(g_width * g_height * BYTES_PER_PIXEL);
      |                      ^
/home/hunter/Development/SquintBoy/emulator-core/src/main/cpp/mgba_jni.cpp:87:30: error: expected expression
   87 |     g_videoBuffer = (color_t*)malloc(g_width * g_height * BYTES_PER_PIXEL);
      |                              ^
/home/hunter/Development/SquintBoy/emulator-core/src/main/cpp/mgba_jni.cpp:224:24: error: use of undeclared identifier 'VFileOpen'
  224 |     struct VFile* vf = VFileOpen(savePath, O_WRONLY | O_CREAT | O_TRUNC);
      |                        ^
/home/hunter/Development/SquintBoy/emulator-core/src/main/cpp/mgba_jni.cpp:246:24: error: use of undeclared identifier 'VFileOpen'
  246 |     struct VFile* vf = VFileOpen(savePath, O_RDONLY);
      |                        ^
8 errors generated.
ninja: build stopped: subcommand failed.
